<package format="2">
  <name>vis_range_image</name>
  <version>0.1.0</version>
  <description>
    Visualizes a PointCloud2 as a range image.
  </description>
  <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
  <license>TODO</license>

  <author>Andreas Reich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
